@@ -1,8 +1,13 @@
 package de.tum.in.www1.artemis.service.connectors.bitbucket;
 
-import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Instant;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -23,15 +28,18 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.web.util.UriComponents;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import de.tum.in.www1.artemis.domain.*;
+import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseParticipation;
+import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
 import de.tum.in.www1.artemis.exception.BitbucketException;
 import de.tum.in.www1.artemis.exception.VersionControlException;
-import de.tum.in.www1.artemis.repository.UserRepository;
+import de.tum.in.www1.artemis.repository.*;
 import de.tum.in.www1.artemis.service.UrlService;
 import de.tum.in.www1.artemis.service.connectors.AbstractVersionControlService;
 import de.tum.in.www1.artemis.service.connectors.ConnectorHealth;
@@ -57,9 +65,6 @@ public class BitbucketService extends AbstractVersionControlService {
     @Value("${artemis.git.name}")
     private String artemisGitName;
 
-    @Value("${artemis.version-control.default-branch:main}")
-    private String defaultBranch;
-
     private final UserRepository userRepository;
 
     private final RestTemplate restTemplate;
@@ -67,16 +72,17 @@ public class BitbucketService extends AbstractVersionControlService {
     private final RestTemplate shortTimeoutRestTemplate;
 
     public BitbucketService(PasswordService passwordService, @Qualifier("bitbucketRestTemplate") RestTemplate restTemplate, UserRepository userRepository, UrlService urlService,
-            @Qualifier("shortTimeoutBitbucketRestTemplate") RestTemplate shortTimeoutRestTemplate, GitService gitService, ApplicationContext applicationContext) {
-        super(applicationContext, gitService, urlService);
+            @Qualifier("shortTimeoutBitbucketRestTemplate") RestTemplate shortTimeoutRestTemplate, GitService gitService, ApplicationContext applicationContext,
+            ProgrammingExerciseStudentParticipationRepository studentParticipationRepository, ProgrammingExerciseRepository programmingExerciseRepository) {
+        super(applicationContext, gitService, urlService, studentParticipationRepository, programmingExerciseRepository);
         this.userRepository = userRepository;
         this.restTemplate = restTemplate;
         this.shortTimeoutRestTemplate = shortTimeoutRestTemplate;
     }
 
     @Override
-    public void configureRepository(ProgrammingExercise exercise, VcsRepositoryUrl repositoryUrl, Set<User> users, boolean allowAccess) {
-        for (User user : users) {
+    public void configureRepository(ProgrammingExercise exercise, ProgrammingExerciseStudentParticipation participation, boolean allowAccess) {
+        for (User user : participation.getStudents()) {
             String username = user.getLogin();
 
             // This is a failsafe in case a user was not created in VCS on registration
@@ -87,11 +93,12 @@ public class BitbucketService extends AbstractVersionControlService {
             if (allowAccess && !Boolean.FALSE.equals(exercise.isAllowOfflineIde())) {
                 // only add access to the repository if the offline IDE usage is NOT disallowed
                 // NOTE: null values are interpreted as offline IDE is allowed
-                addMemberToRepository(repositoryUrl, user);
+                addMemberToRepository(participation.getVcsRepositoryUrl(), user);
             }
         }
 
-        protectBranches(urlService.getProjectKeyFromRepositoryUrl(repositoryUrl), urlService.getRepositorySlugFromRepositoryUrl(repositoryUrl));
+        protectBranches(urlService.getProjectKeyFromRepositoryUrl(participation.getVcsRepositoryUrl()),
+                urlService.getRepositorySlugFromRepositoryUrl(participation.getVcsRepositoryUrl()));
     }
 
     @Override
@@ -105,7 +112,7 @@ public class BitbucketService extends AbstractVersionControlService {
     }
 
     /**
-     * This methods protects the repository on the Bitbucket server by using a REST-call to setup branch protection.
+     * This method protects the repository on the Bitbucket server by using a REST-call to setup branch protection.
      * The branch protection is applied to all branches and prevents rewriting the history (force-pushes) and deletion of branches.
      *
      * @param projectKey     The project key of the repository that should be protected
@@ -181,7 +188,6 @@ public class BitbucketService extends AbstractVersionControlService {
     @Override
     public VcsRepositoryUrl getCloneRepositoryUrl(String projectKey, String repositorySlug) {
         final var cloneUrl = new BitbucketRepositoryUrl(projectKey, repositorySlug);
-        log.debug("getCloneRepositoryUrl: {}", cloneUrl);
         return cloneUrl;
     }
 
@@ -211,7 +217,7 @@ public class BitbucketService extends AbstractVersionControlService {
     }
 
     /**
-     * Creates an user on Bitbucket
+     * Creates a user on Bitbucket
      *
      * @param username     The wanted Bitbucket username
      * @param password     The wanted password in clear text
@@ -467,14 +473,14 @@ public class BitbucketService extends AbstractVersionControlService {
 
         try {
             var response = restTemplate.exchange(getDefaultBranchUrl, HttpMethod.GET, null, BitbucketDefaultBranchDTO.class);
-            var body = response.getBody();
+            var defaultBranchDTO = response.getBody();
 
-            if (body == null) {
+            if (defaultBranchDTO == null) {
                 log.error("Unable to get default branch for repository " + repositorySlug);
                 throw new BitbucketException("Unable to get default branch for repository " + repositorySlug);
             }
 
-            return body.getDisplayId();
+            return defaultBranchDTO.getDisplayId();
         }
         catch (HttpClientErrorException e) {
             log.error("Unable to get default branch for repository " + repositorySlug, e);
@@ -518,7 +524,7 @@ public class BitbucketService extends AbstractVersionControlService {
      */
     private void setStudentRepositoryPermission(VcsRepositoryUrl repositoryUrl, String projectKey, String username, VersionControlRepositoryPermission repositoryPermission)
             throws BitbucketException {
-        String repositorySlug = getRepositoryName(repositoryUrl);
+        String repositorySlug = urlService.getRepositorySlugFromRepositoryUrl(repositoryUrl);
         String baseUrl = bitbucketServerUrl + "/rest/api/latest/projects/" + projectKey + "/repos/" + repositorySlug + "/permissions/users?name="; // NAME&PERMISSION
         String url = baseUrl + username + "&permission=" + repositoryPermission;
         try {
@@ -538,7 +544,7 @@ public class BitbucketService extends AbstractVersionControlService {
      * @param username      The username of the user whom to remove access
      */
     private void removeStudentRepositoryAccess(VcsRepositoryUrl repositoryUrl, String projectKey, String username) throws BitbucketException {
-        String repositorySlug = getRepositoryName(repositoryUrl);
+        String repositorySlug = urlService.getRepositorySlugFromRepositoryUrl(repositoryUrl);
         String baseUrl = bitbucketServerUrl + "/rest/api/latest/projects/" + projectKey + "/repos/" + repositorySlug + "/permissions/users?name="; // NAME
         String url = baseUrl + username;
         try {
@@ -744,7 +750,7 @@ public class BitbucketService extends AbstractVersionControlService {
 
     @Override
     public Boolean repositoryUrlIsValid(@Nullable VcsRepositoryUrl repositoryUrl) {
-        if (repositoryUrl == null || repositoryUrl.getURL() == null) {
+        if (repositoryUrl == null || repositoryUrl.getURI() == null) {
             return false;
         }
         String projectKey;
@@ -807,6 +813,51 @@ public class BitbucketService extends AbstractVersionControlService {
         return commit;
     }
 
+    @Override
+    public ZonedDateTime getPushDate(ProgrammingExerciseParticipation participation, String commitHash, Object eventObject) {
+        // If the event object is supplied we try to retrieve the push date from there to save one call
+        if (eventObject != null) {
+            JsonNode node = new ObjectMapper().convertValue(eventObject, JsonNode.class);
+            String dateString = node.get("date").asText(null);
+            if (dateString != null) {
+                try {
+                    return ZonedDateTime.parse(dateString, DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ssZ"));
+                }
+                catch (DateTimeParseException e) {
+                    // If parsing fails for some reason we ignore the exception and try to get it via the direct request.
+                }
+            }
+        }
+
+        boolean isLastPage = false;
+        final int perPage = 40;
+        int start = 0;
+        while (!isLastPage) {
+            try {
+                UriComponents builder = UriComponentsBuilder.fromUri(bitbucketServerUrl.toURI())
+                        .pathSegment("rest", "api", "latest", "projects", participation.getProgrammingExercise().getProjectKey(), "repos",
+                                urlService.getRepositorySlugFromRepositoryUrl(participation.getVcsRepositoryUrl()), "ref-change-activities")
+                        .queryParam("start", start).queryParam("limit", perPage).queryParam("ref", "refs/heads/" + defaultBranch).build();
+                final var response = restTemplate.exchange(builder.toUri(), HttpMethod.GET, null, BitbucketChangeActivitiesDTO.class);
+                if (response.getStatusCode() != HttpStatus.OK || response.getBody() == null) {
+                    throw new BitbucketException("Unable to get push date for participation " + participation.getId() + "\n" + response.getBody());
+                }
+                final var changeActivities = response.getBody().getValues();
+
+                final var activityOfPush = changeActivities.stream().filter(activity -> commitHash.equals(activity.getRefChange().getToHash())).findFirst();
+                if (activityOfPush.isPresent()) {
+                    return Instant.ofEpochMilli(activityOfPush.get().getCreatedDate()).atZone(ZoneOffset.UTC);
+                }
+                isLastPage = response.getBody().getLastPage();
+                start += perPage;
+            }
+            catch (URISyntaxException e) {
+                throw new BitbucketException("Unable to get push date for participation " + participation.getId(), e);
+            }
+        }
+        throw new BitbucketException("Unable to find push date result for participation " + participation.getId() + " and hash " + commitHash);
+    }
+
     @Nullable
     private JsonNode fetchCommitInfo(JsonNode commitData, String hash) {
         try {
@@ -848,18 +899,18 @@ public class BitbucketService extends AbstractVersionControlService {
         public BitbucketRepositoryUrl(String projectKey, String repositorySlug) {
             final var urlString = bitbucketServerUrl.getProtocol() + "://" + bitbucketServerUrl.getAuthority() + buildRepositoryPath(projectKey, repositorySlug);
             try {
-                this.url = new URL(urlString);
+                this.uri = new URI(urlString);
             }
-            catch (MalformedURLException e) {
+            catch (URISyntaxException e) {
                 throw new BitbucketException("Could not Bitbucket Repository URL", e);
             }
         }
 
         private BitbucketRepositoryUrl(String urlString) {
             try {
-                this.url = new URL(urlString);
+                this.uri = new URI(urlString);
             }
-            catch (MalformedURLException e) {
+            catch (URISyntaxException e) {
                 throw new BitbucketException("Could not Bitbucket Repository URL", e);
             }
         }
@@ -867,7 +918,7 @@ public class BitbucketService extends AbstractVersionControlService {
         @Override
         public VcsRepositoryUrl withUser(String username) {
             this.username = username;
-            return new BitbucketRepositoryUrl(url.toString().replaceAll("(https?://)(.*)", "$1" + username + "@$2"));
+            return new BitbucketRepositoryUrl(uri.toString().replaceAll("(https?://)(.*)", "$1" + username + "@$2"));
         }
 
         private String buildRepositoryPath(String projectKey, String repositorySlug) {
