@@ -7,13 +7,15 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import java.util.stream.StreamSupport;
 
+import javax.annotation.Nullable;
 import javax.validation.constraints.NotNull;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.Transformer;
@@ -157,7 +159,7 @@ public class ProgrammingExerciseExportService {
 
     /**
      * Export instructor repositories and optionally students' repositories in a zip file.
-    
+     *
      * The outputDir is used to store the zip file and temporary files used for zipping so make
      * sure to delete it if it's no longer used.
      *
@@ -251,6 +253,19 @@ public class ProgrammingExerciseExportService {
     }
 
     /**
+     * Exports a solution repository available for an instructor/tutor/student for a given programming exercise.
+     *
+     * The repository download directory is used as the output directory and is destroyed after 5 minutes.
+     * @param exerciseId The id of the programming exercise that has the repository
+     * @param exportErrors List of failures that occurred during the export
+     * @return a zipped file
+     */
+    public Optional<File> exportSolutionRepositoryForExercise(long exerciseId, List<String> exportErrors) {
+        Path outputDir = fileService.getUniquePath(repoDownloadClonePath);
+        return exportSolutionRepositoryForExercise(exerciseId, outputDir, exportErrors);
+    }
+
+    /**
      * Exports an auxiliary repository available for an instructor/editor/tutor for a given programming exercise.
      *
      * The repository download directory is used as the output directory and is destroyed after 5 minutes.
@@ -282,7 +297,7 @@ public class ProgrammingExerciseExportService {
         var exercise = exerciseOrEmpty.get();
         String zippedRepoName = getZippedRepoName(exercise, repositoryType.getName());
         var repositoryUrl = exercise.getRepositoryURL(repositoryType);
-        return exportRepository(repositoryUrl, repositoryType.getName(), zippedRepoName, exercise, outputDir, exportErrors);
+        return exportRepository(repositoryUrl, repositoryType.getName(), zippedRepoName, exercise, outputDir, null, exportErrors);
     }
 
     /**
@@ -302,7 +317,31 @@ public class ProgrammingExerciseExportService {
         var exercise = exerciseOrEmpty.get();
         String zippedRepoName = getZippedRepoName(exercise, auxiliaryRepository.getRepositoryName());
         var repositoryUrl = auxiliaryRepository.getVcsRepositoryUrl();
-        return exportRepository(repositoryUrl, auxiliaryRepository.getName(), zippedRepoName, exercise, outputDir, exportErrors);
+        return exportRepository(repositoryUrl, auxiliaryRepository.getName(), zippedRepoName, exercise, outputDir, null, exportErrors);
+    }
+
+    /**
+     * Exports the solution repository available for an instructor/tutor/student for a given programming exercise.
+     * Removes the ".git" directory from the resulting zip file to prevent leaking unintended information to students.
+     *
+     * @param exerciseId     The id of the programming exercise that has the repository
+     * @param outputDir The directory used for store the zip file
+     * @param exportErrors   List of failures that occurred during the export
+     * @return a zipped file
+     */
+    public Optional<File> exportSolutionRepositoryForExercise(long exerciseId, Path outputDir, List<String> exportErrors) {
+        RepositoryType repositoryType = RepositoryType.SOLUTION;
+        var exerciseOrEmpty = loadExerciseForRepoExport(exerciseId, repositoryType.getName(), exportErrors);
+        if (exerciseOrEmpty.isEmpty()) {
+            return Optional.empty();
+        }
+        var exercise = exerciseOrEmpty.get();
+        String zippedRepoName = getZippedRepoName(exercise, repositoryType.getName());
+        var repositoryUrl = exercise.getRepositoryURL(repositoryType);
+
+        Predicate<Path> gitDirFilter = path -> StreamSupport.stream(path.spliterator(), false).noneMatch(pathPart -> ".git".equalsIgnoreCase(pathPart.toString()));
+
+        return exportRepository(repositoryUrl, repositoryType.getName(), zippedRepoName, exercise, outputDir, gitDirFilter, exportErrors);
     }
 
     private Optional<ProgrammingExercise> loadExerciseForRepoExport(long exerciseId, String repositoryName, List<String> exportErrors) {
@@ -326,7 +365,7 @@ public class ProgrammingExerciseExportService {
     }
 
     private Optional<File> exportRepository(VcsRepositoryUrl repositoryUrl, String repositoryName, String zippedRepoName, ProgrammingExercise exercise, Path outputDir,
-            List<String> exportErrors) {
+            @Nullable Predicate<Path> contentFilter, List<String> exportErrors) {
         try {
             // It's not guaranteed that the repository url is defined (old courses).
             if (repositoryUrl == null) {
@@ -336,7 +375,7 @@ public class ProgrammingExerciseExportService {
                 return Optional.empty();
             }
 
-            Path zippedRepo = createZipForRepository(repositoryUrl, zippedRepoName, outputDir);
+            Path zippedRepo = createZipForRepository(repositoryUrl, zippedRepoName, outputDir, contentFilter);
             if (zippedRepo != null) {
                 return Optional.of(new File(zippedRepo.toString()));
             }
@@ -387,7 +426,7 @@ public class ProgrammingExerciseExportService {
      * @param participations          participations that should be exported
      * @param repositoryExportOptions the options that should be used for the export
      * @param outputDir The directory used for store the zip file
-     * @param exportErrors            A list of errors that occured during export (populated by this function)
+     * @param exportErrors            A list of errors that occurred during export (populated by this function)
      * @return List of zip file paths
      */
     public List<Path> exportStudentRepositories(ProgrammingExercise programmingExercise, @NotNull List<ProgrammingExerciseStudentParticipation> participations,
@@ -424,23 +463,24 @@ public class ProgrammingExerciseExportService {
      * @param repositoryUrl The url of the repository to zip
      * @param zipFilename   The name of the zip file
      * @param outputDir The directory used for downloading and zipping the repository
+     * @param contentFilter The path filter to exclude some files, can be null to include everything
      * @return The path to the zip file.
      * @throws IOException if the zip file couldn't be created
      * @throws GitAPIException if the repo couldn't get checked out
-     * @throws InterruptedException if the repo couldn't get checked out
      */
-    private Path createZipForRepository(VcsRepositoryUrl repositoryUrl, String zipFilename, Path outputDir)
-            throws IOException, GitAPIException, GitException, InterruptedException, UncheckedIOException {
+    private Path createZipForRepository(VcsRepositoryUrl repositoryUrl, String zipFilename, Path outputDir, @Nullable Predicate<Path> contentFilter)
+            throws IOException, GitAPIException, GitException, UncheckedIOException {
         var repositoryDir = fileService.getUniquePathString(outputDir.toString());
         Repository repository;
 
         // Checkout the repository
-        repository = gitService.getOrCheckoutRepository(repositoryUrl, repositoryDir, true);
-        gitService.resetToOriginHead(repository);
-        repository.close();
+        try (Repository repositoryToClose = gitService.getOrCheckoutRepository(repositoryUrl, repositoryDir, true)) {
+            repository = repositoryToClose; // Try-with-resources requires the variable to be declared inside try.
+            gitService.resetToOriginHead(repositoryToClose);
+        }
 
         // Zip it and return the path to the file
-        return gitService.zipRepository(repository, zipFilename, repositoryDir);
+        return gitService.zipRepository(repository, zipFilename, repositoryDir, contentFilter);
     }
 
     /**
@@ -527,7 +567,7 @@ public class ProgrammingExerciseExportService {
             log.debug("Create temporary zip file for repository {}", repository.getLocalPath().toString());
             return gitService.zipRepositoryWithParticipation(repository, outputDir.toString(), repositoryExportOptions.isHideStudentNameInZippedFolder());
         }
-        catch (InterruptedException | GitAPIException | GitException ex) {
+        catch (GitAPIException | GitException ex) {
             log.error("Failed to create zip for participation id {} with exercise id {} because of the following exception ", participation.getId(),
                     participation.getProgrammingExercise().getId(), ex);
             return null;
@@ -541,7 +581,7 @@ public class ProgrammingExerciseExportService {
      */
     public void deleteReposDownloadProjectRootDirectory(ProgrammingExercise programmingExercise, String targetPath) {
         final String projectDirName = programmingExercise.getProjectKey();
-        Path projectPath = Paths.get(targetPath, projectDirName);
+        Path projectPath = Path.of(targetPath, projectDirName);
         try {
             log.info("Delete project root directory {}", projectPath.toFile());
             FileUtils.deleteDirectory(projectPath.toFile());
@@ -586,7 +626,7 @@ public class ProgrammingExerciseExportService {
     public void addParticipantIdentifierToProjectName(Repository repository, ProgrammingExercise programmingExercise, StudentParticipation participation) {
         String participantIdentifier = participation.getParticipantIdentifier();
 
-        // Get all files in repository expect .git files
+        // Get all files in repository except .git files
         List<String> allRepoFiles = listAllFilesInPath(repository.getLocalPath());
 
         // is Java or Kotlin programming language
