@@ -10,7 +10,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.ZonedDateTime;
 import java.util.*;
 
@@ -22,6 +21,8 @@ import org.eclipse.jgit.merge.MergeStrategy;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.OS;
 import org.mockito.MockedStatic;
 import org.mockito.stubbing.Answer;
 import org.slf4j.LoggerFactory;
@@ -110,18 +111,18 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         studentRepository.configureRepos("studentLocalRepo", "studentOriginRepo");
 
         // add file to the repository folder
-        studentFilePath = Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName);
+        studentFilePath = Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName);
         studentFile = Files.createFile(studentFilePath).toFile();
 
         // write content to the created file
         FileUtils.write(studentFile, currentLocalFileContent, Charset.defaultCharset());
 
         // add folder to the repository folder
-        Path folderPath = Paths.get(studentRepository.localRepoFile + "/" + currentLocalFolderName);
+        Path folderPath = Path.of(studentRepository.localRepoFile + "/" + currentLocalFolderName);
         Files.createDirectory(folderPath).toFile();
 
         var localRepoUrl = new GitUtilService.MockFileRepositoryUrl(studentRepository.localRepoFile);
-        database.addStudentParticipationForProgrammingExerciseForLocalRepo(programmingExercise, "student1", localRepoUrl.getURL());
+        database.addStudentParticipationForProgrammingExerciseForLocalRepo(programmingExercise, "student1", localRepoUrl.getURI());
         participation = (ProgrammingExerciseStudentParticipation) studentParticipationRepository.findAll().get(0);
         programmingExercise.setTestRepositoryUrl(localRepoUrl.toString());
 
@@ -130,14 +131,14 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         templateRepository.configureRepos("templateLocalRepo", "templateOriginRepo");
 
         // add file to the template repo folder
-        var templateFilePath = Paths.get(templateRepository.localRepoFile + "/" + currentLocalFileName);
+        var templateFilePath = Path.of(templateRepository.localRepoFile + "/" + currentLocalFileName);
         var templateFile = Files.createFile(templateFilePath).toFile();
 
         // write content to the created file
         FileUtils.write(templateFile, currentLocalFileContent, Charset.defaultCharset());
 
         // add folder to the template repo folder
-        Path templateFolderPath = Paths.get(templateRepository.localRepoFile + "/" + currentLocalFolderName);
+        Path templateFolderPath = Path.of(templateRepository.localRepoFile + "/" + currentLocalFolderName);
         Files.createDirectory(templateFolderPath).toFile();
 
         programmingExercise = database.addTemplateParticipationForProgrammingExercise(programmingExercise);
@@ -160,8 +161,8 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         doReturn(gitService.getExistingCheckedOutRepositoryByLocalPath(studentRepository.localRepoFile.toPath(), null)).when(gitService).getOrCheckoutRepository(participation);
 
         bitbucketRequestMockProvider.enableMockingOfRequests(true);
-        bitbucketRequestMockProvider.mockDefaultBranch(defaultBranch, participation.getVcsRepositoryUrl());
-        bitbucketRequestMockProvider.mockDefaultBranch(defaultBranch, programmingExercise.getVcsTemplateRepositoryUrl());
+        doReturn(defaultBranch).when(versionControlService).getOrRetrieveBranchOfStudentParticipation(participation);
+        doReturn(defaultBranch).when(versionControlService).getOrRetrieveBranchOfExercise(programmingExercise);
 
         logs.add(buildLogEntry);
         logs.add(largeBuildLogEntry);
@@ -193,7 +194,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // Check if all files exist
         for (String key : files.keySet()) {
-            assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + key))).isTrue();
+            assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + key))).isTrue();
         }
     }
 
@@ -205,7 +206,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // Check if all files exist
         for (String key : files.keySet()) {
-            assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + key))).isTrue();
+            assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + key))).isTrue();
         }
         assertThat(files).containsEntry(currentLocalFileName, currentLocalFileContent);
     }
@@ -233,7 +234,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // Check if all files exist
         for (String key : files.keySet()) {
-            assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + key))).isTrue();
+            assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + key))).isTrue();
             assertThat(files.get(key)).isFalse();
         }
     }
@@ -248,7 +249,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // Check if all files exist
         for (String key : files.keySet()) {
-            assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + key))).isTrue();
+            assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + key))).isTrue();
             assertThat(files.get(key)).isTrue();
         }
     }
@@ -258,7 +259,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     public void testGetFilesWithInfoAboutChange_withNewFile() throws Exception {
         FileUtils.write(studentFile, "newContent123", Charset.defaultCharset());
 
-        Path newPath = Paths.get(studentRepository.localRepoFile + "/newFile");
+        Path newPath = Path.of(studentRepository.localRepoFile + "/newFile");
         var file2 = Files.createFile(newPath).toFile();
         // write content to the created file
         FileUtils.write(file2, currentLocalFileContent + "test1", Charset.defaultCharset());
@@ -268,7 +269,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // Check if all files exist
         for (String key : files.keySet()) {
-            assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + key))).isTrue();
+            assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + key))).isTrue();
             assertThat(files.get(key)).isTrue();
         }
     }
@@ -281,14 +282,14 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         solutionRepository.configureRepos("solutionLocalRepo", "solutionOriginRepo");
 
         // add file to the template repo folder
-        var solutionFilePath = Paths.get(solutionRepository.localRepoFile + "/" + currentLocalFileName);
+        var solutionFilePath = Path.of(solutionRepository.localRepoFile + "/" + currentLocalFileName);
         var solutionFile = Files.createFile(solutionFilePath).toFile();
 
         // write content to the created file
         FileUtils.write(solutionFile, currentLocalFileContent, Charset.defaultCharset());
 
         // add folder to the template repo folder
-        Path solutionFolderPath = Paths.get(solutionRepository.localRepoFile + "/" + currentLocalFolderName);
+        Path solutionFolderPath = Path.of(solutionRepository.localRepoFile + "/" + currentLocalFolderName);
         Files.createDirectory(solutionFolderPath).toFile();
 
         programmingExercise = database.addSolutionParticipationForProgrammingExercise(programmingExercise);
@@ -301,7 +302,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // Check if all files exist
         for (String key : files.keySet()) {
-            assertThat(Files.exists(Paths.get(solutionRepository.localRepoFile + "/" + key))).isTrue();
+            assertThat(Files.exists(Path.of(solutionRepository.localRepoFile + "/" + key))).isTrue();
         }
     }
 
@@ -331,9 +332,9 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     public void testCreateFile() throws Exception {
         LinkedMultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("file", "newFile");
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/newFile"))).isFalse();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/newFile"))).isFalse();
         request.postWithoutResponseBody(studentRepoBaseUrl + participation.getId() + "/file", HttpStatus.OK, params);
-        assertThat(Files.isRegularFile(Paths.get(studentRepository.localRepoFile + "/newFile"))).isTrue();
+        assertThat(Files.isRegularFile(Path.of(studentRepository.localRepoFile + "/newFile"))).isTrue();
     }
 
     @Test
@@ -341,37 +342,37 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     public void testCreateFolder() throws Exception {
         LinkedMultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("folder", "newFolder");
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/newFolder"))).isFalse();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/newFolder"))).isFalse();
         request.postWithoutResponseBody(studentRepoBaseUrl + participation.getId() + "/folder", HttpStatus.OK, params);
-        assertThat(Files.isDirectory(Paths.get(studentRepository.localRepoFile + "/newFolder"))).isTrue();
+        assertThat(Files.isDirectory(Path.of(studentRepository.localRepoFile + "/newFolder"))).isTrue();
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     public void testRenameFile() throws Exception {
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
         String newLocalFileName = "newFileName";
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + newLocalFileName))).isFalse();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + newLocalFileName))).isFalse();
         FileMove fileMove = new FileMove();
         fileMove.setCurrentFilePath(currentLocalFileName);
         fileMove.setNewFilename(newLocalFileName);
         request.postWithoutLocation(studentRepoBaseUrl + participation.getId() + "/rename-file", fileMove, HttpStatus.OK, null);
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName))).isFalse();
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + newLocalFileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName))).isFalse();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + newLocalFileName))).isTrue();
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     public void testRenameFolder() throws Exception {
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFolderName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFolderName))).isTrue();
         String newLocalFolderName = "newFolderName";
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + newLocalFolderName))).isFalse();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + newLocalFolderName))).isFalse();
         FileMove fileMove = new FileMove();
         fileMove.setCurrentFilePath(currentLocalFolderName);
         fileMove.setNewFilename(newLocalFolderName);
         request.postWithoutLocation(studentRepoBaseUrl + participation.getId() + "/rename-file", fileMove, HttpStatus.OK, null);
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFolderName))).isFalse();
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + newLocalFolderName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFolderName))).isFalse();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + newLocalFolderName))).isTrue();
     }
 
     @Test
@@ -379,9 +380,9 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     public void testDeleteFile() throws Exception {
         LinkedMultiValueMap<String, String> params = new LinkedMultiValueMap<>();
         params.add("file", currentLocalFileName);
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
         request.delete(studentRepoBaseUrl + participation.getId() + "/file", HttpStatus.OK, params);
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName))).isFalse();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName))).isFalse();
     }
 
     @Test
@@ -400,7 +401,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     public void testSaveFiles() throws Exception {
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
         request.put(studentRepoBaseUrl + participation.getId() + "/files?commit=false", getFileSubmissions("updatedFileContent"), HttpStatus.OK);
         assertThat(FileUtils.readFileToString(studentFilePath.toFile(), Charset.defaultCharset())).isEqualTo("updatedFileContent");
     }
@@ -408,7 +409,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     public void testSaveFilesAndCommit() throws Exception {
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
 
         var receivedStatusBeforeCommit = request.get(studentRepoBaseUrl + participation.getId(), HttpStatus.OK, RepositoryStatusDTO.class);
         assertThat(receivedStatusBeforeCommit.repositoryStatus).hasToString("UNCOMMITTED_CHANGES");
@@ -426,6 +427,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     }
 
     @Test
+    @DisabledOnOs(OS.WINDOWS) // git file locking issues
     @WithMockUser(username = "student1", roles = "USER")
     public void testPullChanges() throws Exception {
         String fileName = "remoteFile";
@@ -435,12 +437,12 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         var remoteRepository = gitService.getExistingCheckedOutRepositoryByLocalPath(studentRepository.originRepoFile.toPath(), null);
 
         // Create file in the remote repository
-        Path filePath = Paths.get(studentRepository.originRepoFile + "/" + fileName);
-        Files.createFile(filePath).toFile();
+        Path filePath = Path.of(studentRepository.originRepoFile.toString()).resolve(fileName);
+        Files.createFile(filePath);
 
-        // Check if the file exists in the remote repository and that it doesn't yet exists in the local repository
-        assertThat(Files.exists(Paths.get(studentRepository.originRepoFile + "/" + fileName))).isTrue();
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + fileName))).isFalse();
+        // Check if the file exists in the remote repository and that it doesn't yet exist in the local repository
+        assertThat(Files.exists(Path.of(studentRepository.originRepoFile.toString()).resolve(fileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile.toString()).resolve(fileName))).isFalse();
 
         // Stage all changes and make a second commit in the remote repository
         gitService.stageAllChanges(remoteRepository);
@@ -454,11 +456,12 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
 
         // Check if the current commit is the same on the local and the remote repository and if the file exists on the local repository
         assertThat(studentRepository.getAllLocalCommits().get(0)).isEqualTo(studentRepository.getAllOriginCommits().get(0));
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + fileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile.toString()).resolve(fileName))).isTrue();
 
     }
 
     @Test
+    @DisabledOnOs(OS.WINDOWS) // git file locking issues
     @WithMockUser(username = "student1", roles = "USER")
     public void testResetToLastCommit() throws Exception {
         String fileName = "testFile";
@@ -477,7 +480,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         assertThat(receivedStatusAfterCommit.repositoryStatus).hasToString("CLEAN");
 
         // Create file in the local repository and commit it
-        Path localFilePath = Paths.get(studentRepository.localRepoFile + "/" + fileName);
+        Path localFilePath = Path.of(studentRepository.localRepoFile + "/" + fileName);
         var localFile = Files.createFile(localFilePath).toFile();
         // write content to the created file
         FileUtils.write(localFile, "local", Charset.defaultCharset());
@@ -485,7 +488,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         studentRepository.localGit.commit().setMessage("local").call();
 
         // Create file in the remote repository and commit it
-        Path remoteFilePath = Paths.get(studentRepository.originRepoFile + "/" + fileName);
+        Path remoteFilePath = Path.of(studentRepository.originRepoFile + "/" + fileName);
         var remoteFile = Files.createFile(remoteFilePath).toFile();
         // write content to the created file
         FileUtils.write(remoteFile, "remote", Charset.defaultCharset());
@@ -497,7 +500,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         List<Ref> refs = studentRepository.localGit.branchList().setListMode(ListBranchCommand.ListMode.REMOTE).call();
         var result = studentRepository.localGit.merge().include(refs.get(0).getObjectId()).setStrategy(MergeStrategy.RESOLVE).call();
         var status = studentRepository.localGit.status().call();
-        assertThat(status.getConflicting().size() > 0).isTrue();
+        assertThat(status.getConflicting()).isNotEmpty();
         assertThat(result.getMergeStatus()).isEqualTo(MergeResult.MergeStatus.CONFLICTING);
 
         // Execute the reset Rest call
@@ -646,7 +649,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         var result = database.addProgrammingParticipationWithResultForExercise(programmingExercise, "tutor1");
         database.addProgrammingSubmissionToResultAndParticipation(result, (StudentParticipation) result.getParticipation(), "xyz");
 
-        request.getList(studentRepoBaseUrl + participation.getId() + "/buildlogs", HttpStatus.BAD_REQUEST, BuildLogEntry.class, parameters(Map.of("resultId", result.getId())));
+        request.getList(studentRepoBaseUrl + participation.getId() + "/buildlogs", HttpStatus.FORBIDDEN, BuildLogEntry.class, parameters(Map.of("resultId", result.getId())));
     }
 
     @Test
@@ -876,7 +879,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         database.addSolutionParticipationForProgrammingExercise(programmingExercise);
         database.addTemplateParticipationForProgrammingExercise(programmingExercise);
 
-        // Check with programmingExercise null and an non-existent participation id
+        // Check with programmingExercise null and a non-existent participation id
         participation.setProgrammingExercise(null);
         participation.setId(123456L);
         programmingExercise.getSolutionParticipation().setProgrammingExercise(null);
@@ -931,7 +934,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
         doAnswer((Answer<Void>) invocation -> {
             ((ProgrammingExercise) participation.getExercise()).setBuildAndTestStudentSubmissionsAfterDueDate(null);
             return null;
-        }).when(versionControlService).configureRepository(programmingExercise, participation.getVcsRepositoryUrl(), participation.getStudents(), true);
+        }).when(versionControlService).configureRepository(programmingExercise, participation, true);
 
         programmingExerciseParticipationService.unlockStudentRepository(programmingExercise, participation);
 
@@ -985,7 +988,7 @@ public class RepositoryIntegrationTest extends AbstractSpringIntegrationBambooBi
     }
 
     private void initialCommitAndSaveFiles(HttpStatus expectedStatus) throws Exception {
-        assertThat(Files.exists(Paths.get(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
+        assertThat(Files.exists(Path.of(studentRepository.localRepoFile + "/" + currentLocalFileName))).isTrue();
         // Do initial commit
         request.put(studentRepoBaseUrl + participation.getId() + "/files?commit=true", getFileSubmissions("initial commit"), expectedStatus);
         // Check repo
